Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vansystem-ingress
  namespace: vansystem
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: vansystem.local
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-service
            port:
              number: 7860

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vansystem-client-ingress
  namespace: vansystem
spec:
  ingressClassName: nginx
  rules:
  - host: vansystem.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 3000
